--- a/outline.css
+++ b/outline.css
@@ -92,12 +92,24 @@ Outline
   background: rgba(145, 187, 4, 1);
 }
 
+
 /* Blueish highlighted nodes (citations) */
 
 .lens-outline.citations .node.highlighted {
   opacity: 0.7;
   background: rgba(11, 157, 217, 1);
 }
+
+.lens-outline.remarks .node.highlighted {
+  opacity: 0.7;
+  background: rgba(46,199,161, 1);
+}
+
+.lens-outline.errors .node.highlighted {
+  opacity: 0.7;
+  background: rgba(228, 67, 34, 1);  
+}
+
 
 .lens-outline.figures .node.selected {
   opacity: 1;
