--- a/outline.css
+++ b/outline.css
@@ -52,8 +52,8 @@ Outline
 }
 
 .lens-outline .node {
-  margin: 0px 0px;
-  width: 30px;
+  margin: 0px 4px;
+  width: 22px;
   background: rgba(0,0,0, 0.4);
   opacity: 0.15;
   cursor: pointer;
@@ -91,7 +91,8 @@ Outline
 
 .lens-outline.remarks .node.highlighted {
   opacity: 0.7;
-  background: rgba(46,199,161, 1);
+  /*background: rgba(46,199,161, 1);*/
+  background: rgba(11, 157, 217, 1);
 }
 
 .lens-outline.errors .node.highlighted {
