--- a/outline.css
+++ b/outline.css
@@ -92,12 +92,16 @@ Outline
 .lens-outline.remarks .node.highlighted {
   opacity: 0.7;
   /*background: rgba(46,199,161, 1);*/
-  background: rgba(11, 157, 217, 1);
+  background: white;
+  border: 3px solid rgba(11, 157, 217, 1);
+  /*background: rgba(11, 157, 217, 1);*/
 }
 
 .lens-outline.errors .node.highlighted {
   opacity: 0.7;
-  background: rgba(228, 67, 34, 1);  
+  background: white;
+  /*border: 1px solid rgba(228, 67, 34, 1);*/
+  border: 3px solid rgba(228, 34, 34, 1);
 }
 
 
