--- a/outline.css
+++ b/outline.css
@@ -84,7 +84,8 @@ Outline
 
 /* Blueish highlighted nodes (citations) */
 
-.lens-outline.citations .node.highlighted {
+.lens-outline.citations .node.highlighted,
+.lens-outline.links .node.highlighted {
   opacity: 0.7;
   background: rgba(11, 157, 217, 1);
 }
@@ -114,7 +115,8 @@ Outline
 
 /* Blueish highlighted nodes (citations) */
 
-.lens-outline.citations .node.selected {
+.lens-outline.citations .node.selected,
+.lens-outline.links .node.selected {
   opacity: 1;
   background: rgba(11, 157, 217, 1);
 }
