--- a/outline.css
+++ b/outline.css
@@ -8,10 +8,11 @@ Outline
   width:30px;
   top: 0px;
   bottom: 0px;
+  background: #eee;
 }
 
 .lens-outline.needless {
-  background: none;
+  /*background: none;*/
 }
 
 .lens-outline .node.cover {
@@ -23,9 +24,9 @@ Outline
   position: absolute;
   top: -7px;
   left: -17px;
-  
-  width: 0; 
-  height: 0; 
+
+  width: 0;
+  height: 0;
   border-top: 8px solid transparent;
   border-bottom: 8px solid transparent;
   border-left: 8px solid black;
@@ -47,11 +48,11 @@ Outline
 }
 
 .lens-outline:hover .visible-area {
-  background-color: rgba(0,0,0, 0.25); 
+  background-color: rgba(0,0,0, 0.25);
 }
 
 .lens-outline .visible-area:hover {
-  background-color: rgba(0,0,0, 0.3); 
+  background-color: rgba(0,0,0, 0.3);
 }
 
 .lens-outline .node {
